// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:image image as form item 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="image"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  颜色
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <div
                class="cxd-ImageField cxd-ImageField--thumb"
                style="transform: scale(1);"
              >
                <div
                  class="cxd-Image cxd-Image--thumb no-border"
                >
                  <div
                    class="cxd-Image-thumbWrap"
                  >
                    <div
                      class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1 cxd-Img-container"
                    >
                      <div
                        class="mask"
                      >
                        <span />
                      </div>
                      <img
                        class="cxd-Image-image"
                        src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:basic 1`] = `
<div>
  <div
    class="cxd-ImageField cxd-ImageField--thumb show"
    style="transform: scale(1);"
  >
    <div
      class="cxd-Image cxd-Image--thumb"
    >
      <div
        class="cxd-Image-thumbWrap"
      >
        <div
          class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1 cxd-Img-container"
        >
          <div
            class="mask"
          >
            <span>
              图片
            </span>
          </div>
          <img
            class="cxd-Image-image b"
            src="https://www.baidu.com/img/bd_logo1.png"
          />
        </div>
      </div>
      <div
        class="cxd-Image-info"
      >
        <div
          class="cxd-Image-title"
          title="图片"
        >
          图片
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:enlargeAble & originalSrc & enlargeTitle & showToolbar 1`] = `
<div>
  <div
    class="cxd-ImageField cxd-ImageField--thumb"
    style="transform: scale(1);"
  >
    <div
      class="cxd-Image cxd-Image--thumb"
    >
      <div
        class="cxd-Image-thumbWrap"
      >
        <div
          class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1 cxd-Img-container"
        >
          <div
            class="mask"
          >
            <span />
          </div>
          <img
            class="cxd-Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
          />
        </div>
        <div
          class="cxd-Image-overlay"
        >
          <a
            class="cxd-Image-overlay-view-icon"
            data-position="bottom"
            data-tooltip="查看大图"
            target="_blank"
          >
            <icon-mock
              classname="icon icon-view"
              icon="view"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:enlargeAble & originalSrc & enlargeTitle & showToolbar: Gallery 1`] = `
<div>
  <div
    class="cxd-ImageField cxd-ImageField--thumb"
    style="transform: scale(1);"
  >
    <div
      class="cxd-Image cxd-Image--thumb"
    >
      <div
        class="cxd-Image-thumbWrap"
      >
        <div
          class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1 cxd-Img-container"
        >
          <div
            class="mask"
          >
            <span />
          </div>
          <img
            class="cxd-Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
          />
        </div>
        <div
          class="cxd-Image-overlay"
        >
          <a
            class="cxd-Image-overlay-view-icon"
            data-position="bottom"
            data-tooltip="查看大图"
            target="_blank"
          >
            <icon-mock
              classname="icon icon-view"
              icon="view"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:href 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-ImageField cxd-ImageField--thumb"
            style="transform: scale(1);"
          >
            <a
              class="cxd-Link"
              href="https://github.com/baidu/amis"
              target="_blank"
              title=""
            >
              <div
                class="cxd-Image cxd-Image--thumb"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1 cxd-Img-container"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg"
                    />
                  </div>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:preview 预览动作 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-ImageField cxd-ImageField--thumb"
            style="transform: scale(1);"
          >
            <div
              class="cxd-Image cxd-Image--thumb"
            >
              <div
                class="cxd-Image-thumbWrap"
              >
                <div
                  class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1 cxd-Img-container"
                >
                  <div
                    class="mask"
                  >
                    <span />
                  </div>
                  <img
                    class="cxd-Image-image"
                    src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                  />
                </div>
              </div>
            </div>
          </div>
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              预览图片
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:title & imageCaption 1`] = `
<div>
  <div
    class="cxd-ImageField cxd-ImageField--thumb"
    style="transform: scale(1);"
  >
    <div
      class="cxd-Image cxd-Image--thumb"
    >
      <div
        class="cxd-Image-thumbWrap"
      >
        <div
          class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1 cxd-Img-container"
        >
          <div
            class="mask"
          >
            <span>
              这是标题
            </span>
          </div>
          <img
            class="cxd-Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
          />
        </div>
      </div>
      <div
        class="cxd-Image-info"
      >
        <div
          class="cxd-Image-title"
          title="这是标题"
        >
          这是标题
        </div>
        <div
          class="cxd-Image-caption"
          title="这是一段说明"
        >
          这是一段说明
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:width & height 1`] = `
<div>
  <div
    class="cxd-ImageField cxd-ImageField--thumb"
    style="transform: scale(1);"
  >
    <div
      class="cxd-Image cxd-Image--thumb"
    >
      <div
        class="cxd-Image-thumbWrap"
      >
        <div
          class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1 cxd-Img-container"
          style="height: 200px; width: 200px;"
        >
          <div
            class="mask"
          >
            <span />
          </div>
          <img
            class="cxd-Image-image"
            src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_400,l_1,f_jpg,q_80"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:image image:zoom & maxScale & minScale 调整图片比例动作 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-ImageField cxd-ImageField--thumb"
            style="transform: scale(1);"
          >
            <div
              class="cxd-Image cxd-Image--thumb"
            >
              <div
                class="cxd-Image-thumbWrap"
              >
                <div
                  class="cxd-Image-thumb cxd-Image-thumb--contain cxd-Image-thumb--1-1 cxd-Img-container"
                >
                  <div
                    class="mask"
                  >
                    <span />
                  </div>
                  <img
                    class="cxd-Image-image"
                    src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                  />
                </div>
              </div>
            </div>
          </div>
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              放大图片
            </span>
          </button>
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              缩小图片
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:images images:basic 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-ImagesField"
          >
            <div
              class="cxd-Images"
            >
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692942/d8e4992057f9.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693148/1314a2a3d3f6.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693379/8f2e79f82be0.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693566/552b175ef11d.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cxd-Divider cxd-Divider--solid cxd-Divider--horizontal"
          />
          <div
            class="cxd-ImagesField"
          >
            <div
              class="cxd-Images"
            >
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692942/d8e4992057f9.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693148/1314a2a3d3f6.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693379/8f2e79f82be0.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span />
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693566/552b175ef11d.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:images images:enlargeAble & originalSrc & source & title & description 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-ImagesField"
          >
            <div
              class="cxd-Images"
            >
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span>
                        图片1
                      </span>
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692722/4f3cb4202335.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                  <div
                    class="cxd-Image-overlay"
                  >
                    <a
                      class="cxd-Image-overlay-view-icon"
                      data-position="bottom"
                      data-tooltip="查看大图"
                      target="_blank"
                    >
                      <icon-mock
                        classname="icon icon-view"
                        icon="view"
                      />
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span>
                        图片2
                      </span>
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395692942/d8e4992057f9.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                  <div
                    class="cxd-Image-overlay"
                  >
                    <a
                      class="cxd-Image-overlay-view-icon"
                      data-position="bottom"
                      data-tooltip="查看大图"
                      target="_blank"
                    >
                      <icon-mock
                        classname="icon icon-view"
                        icon="view"
                      />
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="cxd-Image cxd-Image--thumb cxd-Images-item"
              >
                <div
                  class="cxd-Image-thumbWrap"
                >
                  <div
                    class="cxd-Image-thumb cxd-Image-thumb--cover cxd-Image-thumb--1-1 cxd-Img-container text-style-4"
                  >
                    <div
                      class="mask"
                    >
                      <span>
                        图片3
                      </span>
                    </div>
                    <img
                      class="cxd-Image-image"
                      src="https://internal-amis-res.cdn.bcebos.com/images/2020-1/1578395693148/1314a2a3d3f6.jpeg@s_0,w_216,l_1,f_jpg,q_80"
                    />
                  </div>
                  <div
                    class="cxd-Image-overlay"
                  >
                    <a
                      class="cxd-Image-overlay-view-icon"
                      data-position="bottom"
                      data-tooltip="查看大图"
                      target="_blank"
                    >
                      <icon-mock
                        classname="icon icon-view"
                        icon="view"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
